# hyperon-experimental

./: Cargo.toml
c/: Cargo.toml
c/src/: atom.rs  space.rs
hyperon-atom/: Cargo.toml
hyperon-atom/src/: caching_mapper.rs  gnd.rs  lib.rs  matcher.rs
lib/: Cargo.toml
lib/examples/: custom_match.rs
lib/src/: lib.rs
lib/src/common/: mod.rs  shared.rs  test_utils.rs
lib/src/metta/: interpreter.rs  types.rs
lib/src/metta/runner/: bool.rs  number.rs  str.rs
lib/src/metta/runner/builtin_mods/: fileio.rs  skel.rs
lib/src/metta/runner/stdlib/: atom.rs  core.rs  das.rs  debug.rs  mod.rs
lib/src/space/: grounding.rs  mod.rs
lib/src/space/distributed/: mod.rs
lib/src/space/grounding/: mod.rs
lib/src/space/grounding/index/: mod.rs  storage.rs  trie.rs
repl/: Cargo.toml
repl/src/: metta_shim.rs
rust-das/: Cargo.toml  build.rs  notes.txt
rust-das/src/: bus_node.rs  lib.rs  main.rs  proxy.rs  service_bus.rs
rust-das/src/helpers/: mod.rs
rust-das/src/translator/: mod.rs
