[package]
name = "das"
version = "0.0.2"
edition.workspace = true

[dependencies]
tonic = "0.12.3"
tokio = { version = "1.43.0", features = ["full"] }
prost = "0.13.5"
log.workspace = true
regex.workspace = true
env_logger.workspace = true

mongodb = "3.2.3"
bson = "2.14.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"
